plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.6'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

repositories {
	mavenCentral()
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.boot:spring-boot-dependencies:3.3.6"
	}
}

dependencies {

	// =========================
	// SPRING BOOT CORE
	// =========================
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'

	// =========================
	// SWAGGER / OPENAPI
	// =========================
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'

	// =========================
	// JWT
	// =========================
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	// =========================
	// VALIDATION / JACKSON
	// =========================
	implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
	implementation 'org.hibernate.validator:hibernate-validator:8.0.1.Final'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8'

	// =========================
	// MAPSTRUCT
	// =========================
	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
	annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'

	// =========================
	// LOMBOK
	// =========================
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// =========================
	// DEVTOOLS
	// =========================
	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	// =========================
	// TESTS
	// =========================
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.mockito:mockito-junit-jupiter:5.12.0'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'org.testcontainers:junit-jupiter:1.20.2'
	testImplementation 'org.testcontainers:mongodb:1.19.2'


	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	// Apache POI pour Excel
	implementation 'org.apache.poi:poi-ooxml:5.4.0'

	// OpenPDF pour PDF
	implementation 'com.github.librepdf:openpdf:1.3.30'

}

compileJava {
	options.compilerArgs += [
			"-Amapstruct.defaultComponentModel=spring"
	]
}

tasks.withType(Test).configureEach {
	useJUnitPlatform()
	maxParallelForks = 1
	forkEvery = 0
	systemProperty "junit.jupiter.execution.parallel.enabled", "false"
}
